[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.9"
sbi-rt = "0.0.3"
buddy_system_allocator = "0.9.0"
cfg-if = "1.0"
moic_driver = { path = "../crates/moic_driver" }
array-init = "2.1.0"
riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = [
    "inline-asm",
] }
percpu = { path = "../crates/percpu" }
percpu_macros = { path = "../crates/percpu_macros" }
unified-task = { path = "../crates/unified-task" }
[build-dependencies]
regex = "1.10.5"